[gd_scene load_steps=25 format=3 uid="uid://6wkafegtbmeu"]

[ext_resource type="Texture2D" uid="uid://bssy0h0q0lyx8" path="res://Enemies/Sprites/spikeball.png" id="1_4ddum"]
[ext_resource type="Script" uid="uid://cjj2qj3qnrasn" path="res://Enemies/spikeball.gd" id="1_fs5hn"]
[ext_resource type="Resource" uid="uid://depdtqclw3e4a" path="res://Stats/spikeball_stats.tres" id="2_1dk0y"]
[ext_resource type="Shader" uid="uid://cd25tciedu4h5" path="res://Combat/ShaderComplementary.gdshader" id="3_kpmjd"]
[ext_resource type="PackedScene" uid="uid://hakdr4fdj1fo" path="res://Combat/health_component.tscn" id="3_p3kbi"]
[ext_resource type="PackedScene" uid="uid://6c21m1l8r268" path="res://Combat/hurtbox.tscn" id="4_1h7qc"]
[ext_resource type="PackedScene" uid="uid://cfur0wgencjh8" path="res://Enemies/player_detection_zone.tscn" id="5_mmtor"]
[ext_resource type="PackedScene" uid="uid://lfrhnehwb41h" path="res://Combat/hitbox.tscn" id="6_brwps"]
[ext_resource type="PackedScene" uid="uid://3od7ps120wrn" path="res://Enemies/soft_collision.tscn" id="7_brwps"]
[ext_resource type="PackedScene" uid="uid://hfj2qrgqwdms" path="res://Enemies/wander_controller.tscn" id="10_fs5hn"]
[ext_resource type="PackedScene" uid="uid://gh2hmf87o2ox" path="res://Enemies/sword_slow_controller.tscn" id="11_p3kbi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_81w6i"]
resource_local_to_scene = true
shader = ExtResource("3_kpmjd")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gvbuj"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5qkv"]
size = Vector2(14, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_mmtor"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpmjd"]
size = Vector2(10, 9)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kpmjd"]
radius = 5.0
height = 12.0

[sub_resource type="Animation" id="Animation_brwps"]
resource_name = "Attack"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_s5qkv"]
resource_name = "Idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mmtor"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kpmjd"]
_data = {
&"Attack": SubResource("Animation_brwps"),
&"Idle": SubResource("Animation_s5qkv"),
&"RESET": SubResource("Animation_mmtor")
}

[sub_resource type="Animation" id="Animation_p3kbi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fs5hn"]
resource_name = "Start"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1dk0y"]
_data = {
&"RESET": SubResource("Animation_p3kbi"),
&"Start": SubResource("Animation_fs5hn")
}

[node name="Spikeball" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
script = ExtResource("1_fs5hn")
stats = ExtResource("2_1dk0y")
metadata/_edit_group_ = true

[node name="Health_Component" parent="." instance=ExtResource("3_p3kbi")]

[node name="WanderController" parent="." instance=ExtResource("10_fs5hn")]

[node name="SwordSlowController" parent="." instance=ExtResource("11_p3kbi")]

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_81w6i")
position = Vector2(0, -3)
texture = ExtResource("1_4ddum")
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gvbuj")

[node name="Hurtbox" parent="." instance=ExtResource("4_1h7qc")]
visible = false
collision_layer = 8
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_s5qkv")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("5_mmtor")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_mmtor")

[node name="Hitbox" parent="." instance=ExtResource("6_brwps")]
visible = false
collision_layer = 128
collision_mask = 260

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_kpmjd")

[node name="SoftCollision" parent="." instance=ExtResource("7_brwps")]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kpmjd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kpmjd")
}

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1dk0y")
}

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="trigger_knockback" from="Hurtbox" to="." method="_on_hurtbox_trigger_knockback"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
